style: fix audio visualizer visibility on hover and show pause icon for playing tracks

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -816,7 +816,8 @@ button {
   display: none;
 }
 
-.track-list-row:hover .index-number {
+.track-list-row:hover .index-number,
+.track-list-row:hover .audio-visualizer {
   display: none;
 }
 
